--- a/src/main/resources/public/index.html
+++ b/src/main/resources/public/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Hello from Appsody! Welcome</title>
+    <title>Hello from Appsody!</title>
   </head>
   <body>
     <h3>Hello from Appsody!</h3>
